<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ff8a80"
    tools:context="com.example.android.playwithme.MakeDrum">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Headers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_drum_intro_text" />

        <ImageView
            style="@style/ImageLayouts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/drum_nine" />

        <TextView
            style="@style/HeaderTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/required_materials_header" />

        <TextView
            style="@style/ListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pencils" />

        <TextView
            style="@style/ListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rubber_bands" />

        <TextView
            style="@style/ListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/large_can" />

        <TextView
            style="@style/ListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mallet" />


        <TextView
            style="@style/ListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/screw_drive" />

        <TextView
            style="@style/InstructionsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drum_step_one" />

        <TextView
            style="@style/InstructionsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drum_step_two" />

        <ImageView
            style="@style/ImageLayouts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/drum_two" />

        <TextView
            style="@style/InstructionsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drum_step_three" />

        <ImageView
            style="@style/ImageLayouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/drum_three" />

        <TextView
            style="@style/InstructionsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drum_step_four" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/inside_view"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:paddingLeft="16dp"
                android:src="@drawable/drum_four" />

            <ImageView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingRight="16dp"
                android:src="@drawable/drum_five" />

        </RelativeLayout>

        <TextView
            style="@style/InstructionsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drum_step_five" />

        <ImageView
            style="@style/ImageLayouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/drum_six" />


        <TextView
            style="@style/InstructionsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drum_step_seven" />

        <ImageView
            style="@style/ImageLayouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/drum_seven" />


        <TextView
            style="@style/InstructionsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drum_step_eight" />

        <ImageView
            style="@style/ImageLayouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/drum_eight" />

        <TextView
            style="@style/InstructionsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drum_step_nine" />

        <TextView
            style="@style/InstructionsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drum_step_ten" />

        <ImageView
            style="@style/ImageLayouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/drum_nine" />

        <ImageButton
            style="@style/DoneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="backToMain"
            android:src="@drawable/drum_done" />

    </LinearLayout>
</ScrollView>
