<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff8a80"
    tools:context="com.example.android.playwithme.MakeAcorn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Headers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_acorn_intro_text" />

        <TextView
            style="@style/HeaderTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/required_materials_header" />

        <TextView
            style="@style/ListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acorn_cap" />

        <TextView
            style="@style/ListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/acorn_hands" />

        <TextView
            style="@style/InstructionsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acorn_step_one" />

        <ImageView
            style="@style/ImageLayouts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/acorns" />

        <TextView
            style="@style/InstructionsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acorn_step_two" />

        <ImageView
            style="@style/ImageLayouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/acorn_hands" />

        <TextView
            style="@style/InstructionsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acorn_step_three" />

        <TextView
            style="@style/InstructionsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acorn_step_four" />

        <ImageButton
            style="@style/DoneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="backToMain"
            android:src="@drawable/acorn_done" />

    </LinearLayout>
</ScrollView>
