<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ff8a80"
    tools:context="com.example.android.playwithme.MakeMinecraft">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Headers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pig_intro" />

        <ImageView
            style="@style/ImageLayouts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/two_rows_magenta" />


        <TextView
            style="@style/InstructionsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pig_step_one" />

        <ImageView
            style="@style/ImageLayouts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/row_magenta" />

        <TextView
            style="@style/InstructionsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pig_step_two" />

        <ImageView
            style="@style/ImageLayouts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/row_two_magenta" />

        <TextView
            style="@style/InstructionsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pig_step_three" />

        <ImageView
            style="@style/ImageLayouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/row_two_pink" />

        <TextView
            style="@style/InstructionsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pig_step_four" />

        <ImageView
            style="@style/ImageLayouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/add_gray_purple" />

        <TextView
            style="@style/InstructionsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pig_step_six" />

        <ImageView
            style="@style/ImageLayouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/fill_in_magenta" />

        <TextView
            style="@style/InstructionsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pig_step_seven" />

        <TextView
            style="@style/InstructionsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pig_step_eight" />

        <ImageView
            style="@style/ImageLayouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/six_quartz_black" />


        <TextView
            style="@style/InstructionsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pig_step_nine" />

        <ImageView
            style="@style/ImageLayouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/fill_between_magenta" />

        <TextView
            style="@style/InstructionsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pig_step_ten" />

        <ImageView
            style="@style/ImageLayouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/two_rows_magenta" />

        <ImageButton
            style="@style/DoneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="backToMain"
            android:src="@drawable/pig_done" />

    </LinearLayout>
</ScrollView>
